--- a/tmpl/members.tmpl
+++ b/tmpl/members.tmpl
@@ -3,8 +3,7 @@ var data = obj;
 var self = this;
 ?>
 h4. <?js= data.attribs + name + (data.signature ? data.signature : '') ?>
-<?js if (data.summary) { ?><?js= data.summary.replace(/\n/g, '').replace(/([\{\}])/g, "\\$1").replace(/(\{\})/g, "\\$1") ?><?js } ?>
-<?js if (data.description) { ?><?js= data.description.replace(/\n/g, '').replace(/([\{\}])/g, "\\$1") ?><?js } ?>
+<?js if (data.summary) { ?>*<?js= data.summary.replace(/\n/g, '').replace(/([\{\}])/g, "\\$1").replace(/(\{\})/g, "\\$1") ?>*<?js } ?> <?js if (data.description) { ?><?js= data.description.replace(/\n/g, '').replace(/([\{\}])/g, "\\$1") ?><?js } ?>
 <?js if (data.type && data.type.names) {?>h5. Type:
 <?js= self.partial('type.tmpl', data.type.names).replace(/\n/g, '').replace(/([\{\}])/g, "\\$1") ?><?js } ?>
 <?js= this.partial('details.tmpl', data) ?>
