--- a/tmpl/container.tmpl
+++ b/tmpl/container.tmpl
@@ -32,7 +32,8 @@ h3. Requires
     if (doc.kind !== 'globalobj' && classes && classes.length) { 
 ?>
 h3. Classes
-<?js classes.forEach(function(c) { ?><?js if (classes.length > 1) { ?>* <?js } ?><?js= self.linkto(c.longname, c.name) ?><?js if (c.summary) { ?> (<?js= c.summary.replace(/\n/g, ' ').replace(/([\{\}])/g, "\\$1") ?>)<?js } ?><?js }); ?><?js } ?><?js
+<?js classes.forEach(function(c) { ?><?js if (classes.length > 1) { ?>
+* <?js } ?><?js= self.linkto(c.longname, c.longname) ?><?js if (c.summary) { ?> (<?js= c.summary.replace(/\n/g, ' ').replace(/([\{\}])/g, "\\$1") ?>)<?js } ?><?js }); ?><?js } ?><?js
     var namespaces = self.find({kind: 'namespace', memberof: doc.longname}); 
     if (doc.kind !== 'globalobj' && namespaces && namespaces.length) { 
 ?>
