--- a/tmpl/exceptions.tmpl
+++ b/tmpl/exceptions.tmpl
@@ -2,8 +2,8 @@
     var data = obj;
 ?>
 <?js if (data.description) { ?>
-<?js= data.description.replace(/\n/g, ' ').replace(/([\{\}])/g, "\\$1") ?>
+<?js= data.description.replace(/\n/g, ' ').replace(/([\{\}|\\])/g, "\\$1") ?>
 <?js } 
 if (data.type && data.type.names) { ?>
-<?js= this.partial('type.tmpl', data.type.names).replace(/\n+/g, ' ').replace(/([\{\}])/g, "\\$1") ?>
+<?js= this.partial('type.tmpl', data.type.names).replace(/\n+/g, ' ').replace(/([\{\}|\\])/g, "\\$1") ?>
 <?js } ?>
