--- a/tmpl/method.tmpl
+++ b/tmpl/method.tmpl
@@ -3,10 +3,10 @@ var data = obj;
 var self = this;
 ?>
 h4. <?js= data.attribs + (kind === 'class' ? 'new ' : '') + name + (kind !== 'event' ? data.signature : '') ?>
-<?js if (data.summary) { ?><?js= summary.replace(/\n/g, ' ').replace(/([\{\}])/g, "\\$1") ?><?js }
-if (data.description) { ?><?js= data.description.replace(/\n/g, ' ').replace(/([\{\}])/g, "\\$1") ?><?js } ?>
+<?js if (data.summary) { ?><?js= summary.replace(/\n/g, ' ').replace(/([\{\}|\\])/g, "\\$1") ?><?js }
+if (data.description) { ?><?js= data.description.replace(/\n/g, ' ').replace(/([\{\}|\\])/g, "\\$1") ?><?js } ?>
 <?js if (kind === 'event' && data.type && data.type.names) {?>
-Type: <?js= self.partial('type.tmpl', data.type.names).replace(/\n+/g, ' ').replace(/([\{\}])/g, "\\$1") ?><?js } ?><?js if (data['this']) { ?>
+Type: <?js= self.partial('type.tmpl', data.type.names).replace(/\n+/g, ' ').replace(/([\{\}|\\])/g, "\\$1") ?><?js } ?><?js if (data['this']) { ?>
 This: <?js= this.linkto(data['this'], data['this']) ?>
 <?js } ?><?js if (data.params && params.length) { ?>
 Parameters:<?js= this.partial('params.tmpl', params) ?><?js } ?>
